<resources>
    <string name="app_name">Schedule at a Glance</string>
    <string name="enter_new_task_details">Enter New Task Details</string>
    <string name="name_of_task">Name of Task</string>
    <string name="create_this_task">Create This Task</string>
    <string name="upcoming_schedule">Upcoming Schedule</string>
    <string name="logout">Logout</string>
    <string name="options">Options</string>
    <string name="task_details">Task Details</string>
    <string name="return_to_schedule">Return to Schedule</string>
    <string name="go_back">Go Back</string>

    <string-array name="categories">
        <item>Select a Category</item>
        <item>Assignment / Lab</item>
        <item>Project</item>
        <item>Quiz</item>
        <item>Test</item>
        <item>Meeting</item>
    </string-array>
    <string-array name="importance">
        <item>Select Priority Level</item>
        <item>Normal</item>
        <item>High</item>
        <item>Critical</item>
    </string-array>

</resources>